fix: fix transparent select invisible border on focus

--- a/assets/stylesheet/forms.scss
+++ b/assets/stylesheet/forms.scss
@@ -91,6 +91,7 @@
       &:focus {
         box-shadow: 0 0 0 1px $color-link;
         outline: none;
+        border: none;
       }
     }
 
